--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <link type="image/png" sizes="16x16" rel="icon" href="./icons8-compass-16.png">
+    <title>Cursor Pointer</title>
     <style>
       body{
         margin: 0%;
@@ -17,3 +17,4 @@
     <canvas></canvas>
   </body>
 </html>
+
